--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <h1> Apache2 webserver </h1>
 <h2> This is a website running on apache2 web server</h2>
 <h2> This is the first change.</h2>
-<h2> This is second change. </h1>
+<h2> This is second change. </h2>
+<h2> This is third change. </h2>
 </body>
 </html>
 
