--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <h2> This is third change. </h2>
 <h2> This is fourth change. </h2>
 <h2> This is fifth change. </h2>
+<h2> This is sixth change. </h2>
 </body>
 </html>
 
