--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <h2> This is fourth change. </h2>
 <h2> This is fifth change. </h2>
 <h2> This is sixth change. </h2>
+<h2> This is seventh change. </h2>
 </body>
 </html>
 
